--- a/App/src/main/res/values/strings.xml
+++ b/App/src/main/res/values/strings.xml
@@ -17,8 +17,8 @@
     <string name="ble_not_supported">BLE is not supported</string>
     <string name="label_data">Read Data: </string>
     <string name="label_wdata">Write Data:</string>
-    <string name="label_local_ip_address">Local IP address: </string>
-    <string name="label_ip_address">Remote IP address: </string>
+    <string name="label_local_ip_address">Local IP: </string>
+    <string name="label_ip_address">Remote IP: </string>
     <string name="label_local_port">Local port: </string>
     <string name="label_remote_port">Remote port: </string>
     <string name="label_buttonCallOut">Call Out</string>
@@ -29,8 +29,8 @@
     <string name="no_data">No data</string>
     <string name="connected">Connected</string>
     <string name="disconnected">Disconnected</string>
-    <string name="title_devices">CIT Device Scan</string>
-    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
+    <string name="title_devices">BLE HandsFree</string>
+    <string name="error_bluetooth_not_supported">Bluetooth not supported</string>
 
     <string name="unknown_device">Unknown device</string>
     <string name="unknown_characteristic">Unknown characteristic</string>
