--- a/App/src/main/res/values/strings.xml
+++ b/App/src/main/res/values/strings.xml
@@ -1,17 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2013 The Android Open Source Project
+<?xml version="1.0" encoding="utf-8"?>
 
-     Licensed under the Apache License, Version 2.0 (the "License");
-     you may not use this file except in compliance with the License.
-     You may obtain a copy of the License at
-
-          http://www.apache.org/licenses/LICENSE-2.0
-
-     Unless required by applicable law or agreed to in writing, software
-     distributed under the License is distributed on an "AS IS" BASIS,
-     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-     See the License for the specific language governing permissions and
-     limitations under the License.
--->
 <resources>
     <string name="ble_not_supported">BLE is not supported</string>
     <string name="label_data">Read Data: </string>
@@ -50,14 +38,12 @@
 
     <!-- Dialog message -->
     <string name="connect_message">Устанавливается BT-соединение ...</string>
-    <string name="connected_message">BT-соединение с устройтвом установлено.</string>
-    <string name="click_connected_device_message">Это BT-устройство в настоящий момент подключено к Вашему
-        смартфону. Нажмите Отключить, чтобы завершить BT-соединение, или Отменить, чтобы продолжить
-        работу с устройством.</string>
-    <string name="click_other_device_message"> В настоящий момент к Вашему смартфону подключено другое
-    устройство. Нажмите Подключить, чтобы установить новое BT-соединение, или Отменить, чтобы продолжить
-    работу с прежним устройством.</string>
-    <string name="disconnected_message">Соединение с устройством разорвано !!!</string>
+    <string name="connected_message">BT-соединение с устройcтвом установлено.</string>
+    <string name="click_connected_device_message">Это BT-устройство в настоящий момент подключено к Вашему смартфону.
+        Нажмите "Отключить", чтобы завершить BT-соединение, или "Отменить", чтобы продолжить работу с устройством.</string>
+    <string name="click_other_device_message"> В настоящий момент к Вашему смартфону подключено другое устройство.
+        Нажмите "Подключить", чтобы установить новое BT-соединение, или "Отменить", чтобы продолжить работу с прежним устройством.</string>
+    <string name="disconnected_message">Соединение с устройством разорвано.</string>
 
     <!-- Dialog buttons -->
     <string name="cancel">Отменить</string>
