--- a/App/src/main/res/values/strings.xml
+++ b/App/src/main/res/values/strings.xml
@@ -6,9 +6,12 @@
     <string name="label_wdata">Write Data:</string>
     <string name="label_garniture">Unknown device</string>
     <string name="label_local_ip_address">Local IP: </string>
+    <string name="label_local_ip_text">Local IP </string>
     <string name="label_ip_address">Remote IP: </string>
     <string name="label_local_port">Local port: </string>
     <string name="label_remote_port">Remote port: </string>
+    <string name="label_port_number">Port number</string>
+    <string name="label_insert_ip">Введите IP-адрес</string>
     <string name="label_buttonCallOut">Call Out</string>
     <string name="label_buttonCallIn">Call In</string>
     <string name="label_buttonChDevice">Change</string>
@@ -23,7 +26,7 @@
     <string name="title_devices">BLE HandsFree</string>
     <string name="error_bluetooth_not_supported">Bluetooth not supported</string>
 
-    <string name="unknown_device">Unknown device</string>
+    <string name="unknown_device">Неизвестное устройство</string>
     <string name="unknown_characteristic">Unknown characteristic</string>
     <string name="unknown_service">Unknown service</string>
 
@@ -32,6 +35,9 @@
     <string name="menu_disconnect">Disconnect</string>
     <string name="menu_scan">Scan</string>
     <string name="menu_stop">Stop</string>
+
+    <string name="menu_refresh"> </string>
+
     <!-- Button chnage device names -->
     <string name="connect_device">ПОДКЛЮЧИТЬ ГАРНИТУРУ</string>
     <string name="change_device">СМЕНИТЬ ГАРНИТУРУ</string>
@@ -49,7 +55,18 @@
     <string name="cancel">Отменить</string>
     <string name="disconnect">Отключить</string>
     <string name="connect">Подключить</string>
+
     <!-- Names of HeadSet -->
     <string name="CIT">CIT</string>
+
+    <!-- Contacts -->
+    <string name="act_main_name">Searching</string>
+    <string name="action_settings">Settings</string>
+    <string name="contact_name">ZINCHUKVA</string>
+    <string name="hint_search">Search…</string>
+    <string name="hero_name">Captain America</string>
+    <string name="hero_universe">DC UNIVERSE</string>
+    <string name="hero_image">The Chosen One</string>
+    <string name="hint_id">Contact\'s ID…</string>
 
 </resources>
