--- a/App/src/main/res/values/strings.xml
+++ b/App/src/main/res/values/strings.xml
@@ -71,6 +71,6 @@
     <string name="hint_id">Contact\'s ID…</string>
 
     <!-- Settings -->
-    <string name="appMode">appMode</string>
+    <string name="opMode">appMode</string>
 
 </resources>
