fixed and added bt2bt packet size setting

--- a/docs/problemsAndSolves.adoc
+++ b/docs/problemsAndSolves.adoc
@@ -4,3 +4,11 @@
 Р: `btLatency` уменьшена с 9 мс до 8 мс.
 Задержка больше не обнаруживается.
 При уменьшении `btLatency` до 5 мс чрезмерно выросли потери пакетов.
+
+П:
+Не отрабатывается применение настроек при переходе из SettingsA в DeviceA.
+Возможная причина: обработка настроек находится в DeviceA::onCreate.
+В то же время при заходе в SettingsA и возврате DeviceA::onDestroy не отрабатывает.
+
+Р:
+Вызывать DeviceA::finish() при переходе в SettingsA:
